student-content/templates/simple-chat/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-chat
  labels:
    app: simple-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-chat
  template:
    metadata:
      labels:
        app: simple-chat
    spec:
      containers:
        - name: simple-chat
          image: quay.io/rhoai-genaiops/simple-chat:0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8501
              protocol: TCP
