student-content/templates/simple-chat/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-chat
  labels:
    app: simple-chat
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8501
      protocol: TCP
      name: http
  selector:
    app: simple-chat
