student-content/templates/simple-chat/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple-chat
  labels:
    app: simple-chat
spec:
  to:
    kind: Service
    name: simple-chat
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
